# agent-platform

./: .gitignore  README.md  pyproject.toml
.scripts/: e2e-p8.py  e2e-webui.py
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml  start.sh
deploy/config/: jobs.json  seed.models.json.example
docs/: API.md  DEPLOY.md  project-dashboard.md
gateway/: __init__.py  app.py  async_runner.py  config.py  taskagent_client.py
gateway/auth/: __init__.py  deps.py  jwt_utils.py  password.py
gateway/db/: __init__.py  repo.py  schema.sql
gateway/parsers/: __init__.py  common.py  csv_parser.py  excel_parser.py  json_parser.py
gateway/routes/: agents.py  auth.py  tasks.py  teams.py  tools.py  uploads.py  user_agents.py
gateway/seed_templates/: __init__.py  code-review@v1.md  data-analysis-report@v1.md  doc-summary@v1.md
tests/: conftest.py  test_agents.py  test_async_tasks.py  test_auth.py  test_tasks.py  test_uploads.py
webui/: app.js  index.html  style.css
